<?xml version="1.0"?>
<package format="2">
  <name>faceid</name>
  <version>0.0.0</version>
  <description>The faceid package</description>


  <maintainer email="mblank16@student.aau.dk">woombat</maintainer>

  <maintainer email="jschmi17@student.aau.dk">Jonathan</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/faceid</url> -->

  <author email="19gr566@es.aau.dk">Robotics group 566 anno 2019 fifth. semester</author>



  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
